2010-12-16  Maciej W. Rozycki  <macro@codesourcery.com>

	* symbols.c (symbol_clone_if_forward_ref): Call tc_new_dot_label
	for new fake labels created off the dot special symbol.
	* config/tc-mips.h (tc_new_dot_label): New macro.
	(mips_record_label): New prototype.
	* config/tc-mips.c (my_getExpression): Remove MIPS16 fake label
	annotation.
	(s_cons, s_float_cons, s_gpword, s_gpdword): Only clear labels
	recorded once data expressions have been evaluated.
	(mips_define_label): Move code to record labels over to...
	(mips_record_label): ... this new function.
	* doc/internals.texi: Document tc_new_dot_label.

2010-12-10  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.h (TC_ADDRESS_BYTES): New macro.
	(mips_address_bytes): New prototype.
	* config/tc-mips.c (mips_address_bytes): New function.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips_ip): Remove dead format specifier code.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (file_ase_mips16): Adjust comment.
	(append_insn): Update file_ase_mips16.
	(mips_after_parse_args): Don't set file_ase_mips16 here.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro)
	<M_MSGSND, M_MSGLD, M_MSGLD_T, M_MSGWAIT, M_MSGWAIT_T>: Remove
	dedicated return points.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro) <M_DEXT, M_DINS>: Correct types used
	for pos and size.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro) <ld_st>: Don't load a zero into an
	auxiliary register when using a signed 16-bit constant offset.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips_ip): Remove lastregno's
	preinitialization.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips_ip) <'('>: Don't let '4', '5' or '-'
	as a base register specifier.
 
2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>
