@@ -4262,7 +4262,11 @@ ENUMX
 ENUMX
   BFD_RELOC_RX_ABS16
 ENUMX
+  BFD_RELOC_RX_ABS16_REV
+ENUMX
   BFD_RELOC_RX_ABS32
+ENUMX
+  BFD_RELOC_RX_ABS32_REV
 ENUMX
   BFD_RELOC_RX_ABS16U
 ENUMX
